trend-chef-splunk-security/nested/trendp2p-splunkenterprise.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string"
    },
    "network-api-version": {
      "type": "string",
      "defaultValue": ""
    },
    "compute-api-version": {
      "type": "string",
      "defaultValue": ""
    },
    "vmNameSplunkEnterprise": {
      "type": "string",
      "defaultValue": ""
    },
    "vmAdminUsernameSplunkEnterprise": {
      "defaultValue": "",
      "type": "string"
    },
    "vmAdminPasswordSplunkEnterprise": {
      "defaultValue": "",
      "type": "SecureString"
    },
    "splunkAdminPassword": {
      "defaultValue": "",
      "type": "SecureString"
    },
    "publicIPAddressSettingsSplunk": {
      "type": "object",
      "metadata": {
        "description": "Public IP address settings object"
      }
    },
    "networkSecurityGroupNameSplunkEnterprise": {
      "type": "string",
      "defaultValue": ""
    },
    "networkInterfaceNameSplunkEnterprise": {
      "defaultValue": "",
      "type": "String"
    },
    "machineSettings": {
      "type": "object"
    },
    "subnet3Ref": {
      "type": "string"
    },
    "osSettingsSplunk": {
      "type": "object"
    },
    "tagvalues": {
      "type": "object",
      "defaultValue": {
        "program": "p2p",
        "project": "TrendMicro"
      }
    },
    "udpPort": {
      "defaultValue": "",
      "type": "string"
    },
    "storageAccountName": {
      "defaultValue": "",
      "type": "String"
    },
    "trendmicroTags": {
      "type": "object"
    },
    "chefSoftwareTags": {
      "type": "object"
    },
    "splunkTags": {
      "type": "object"
    },
    "quickstartTags": {
      "type": "object"
    }
  },
  "variables": {
    "publicIpName": "[parameters('machineSettings').publicIPName]",
    "splunkServerRole": "splunk_server",
    "singleQuote": "'",
    "clusterMasterIp": "[parameters('machineSettings').clusterMasterIp]"
  },
  "resources": [
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(parameters('publicIPAddressSettingsSplunk').name, parameters('publicIPAddressSettingsSplunk').map[copyindex()])]",
      "copy": {
        "name": "publicIPAddressLoop",
        "count": "[parameters('publicIPAddressSettingsSplunk').count]"
      },
      "location": "[parameters('location')]",
      "tags": {
        "program": "[parameters('tagvalues').program]",
        "project": "[parameters('tagvalues').project]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('splunkTags').provider]"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[concat(parameters('publicIPAddressSettingsSplunk').domainNamePrefix, parameters('publicIPAddressSettingsSplunk').map[copyindex()])]"
        }
      }
    },
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupNameSplunkEnterprise')]",
      "location": "[parameters('location')]",
      "tags": {
        "program": "[parameters('tagvalues').program]",
        "project": "[parameters('tagvalues').project]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('splunkTags').provider]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "Allow-SSH",
            "properties": {
              "description": "Allows SSH traffic",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('machineSettings').sshFrom]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-HTTP",
            "properties": {
              "description": "Allows HTTP traffic on port 8000",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-HTTPS",
            "properties": {
              "description": "Allows HTTPS traffic on port 443",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-HTTP-Event-Collector",
            "properties": {
              "description": "Allows HTTP(S) Event Collector traffic on port 8088",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8088",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-Receiver-TCP",
            "properties": {
              "description": "Allows receiver TCP traffic on port 9997",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "9997",
              "sourceAddressPrefix": "[parameters('machineSettings').forwardedDataFrom]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-Mgmt-From-VNET",
            "properties": {
              "description": "Allows mgmt on port 8089 from VNET only",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8089",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow-Custom-UDP",
            "properties": {
              "description": "Allows UDP port entered by user",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "[parameters('udpPort')]",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 160,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[parameters('networkInterfaceNameSplunkEnterprise')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupNameSplunkEnterprise'))]",
        "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIpName'))]"
      ],
      "tags": {
        "program": "[parameters('tagvalues').program]",
        "project": "[parameters('tagvalues').project]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('splunkTags').provider]"
      },
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupNameSplunkEnterprise'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('machineSettings').staticIp]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]"
              },
              "subnet": {
                "id": "[parameters('subnet3Ref')]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[parameters('vmNameSplunkEnterprise')]",
      "location": "[parameters('location')]",
      "tags": {
        "program": "[parameters('tagvalues').program]",
        "project": "[parameters('tagvalues').project]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('splunkTags').provider]"
      },
      "plan": {
        "name": "[parameters('osSettingsSplunk').imageReference.sku]",
        "publisher": "[parameters('osSettingsSplunk').imageReference.publisher]",
        "product": "[parameters('osSettingsSplunk').imageReference.offer]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', parameters('networkInterfaceNameSplunkEnterprise'))]"
      ],
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', parameters('machineSettings').availabilitySet)]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('machineSettings').vmSize]"
        },
        "osProfile": {
          "computerName": "[parameters('vmNameSplunkEnterprise')]",
          "adminUsername": "[parameters('vmAdminUsernameSplunkEnterprise')]",
          "adminPassword": "[parameters('vmAdminPasswordSplunkEnterprise')]"
        },
        "storageProfile": {
          "imageReference": "[parameters('osSettingsSplunk').imageReference]",
          "osDisk": {
            "name": "[concat(parameters('vmNameSplunkEnterprise'),'_OSDisk')]",
            "caching": "ReadWrite",
            "createOption": "FromImage"
          },
          "dataDisks": [
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk1')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 0,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk2')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 1,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk3')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 2,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk4')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 3,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk5')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 4,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk6')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 5,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk7')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 6,
              "caching": "ReadOnly",
              "createOption": "Empty"
            },
            {
              "name": "[concat(parameters('vmNameSplunkEnterprise'),'_DataDisk8')]",
              "diskSizeGB": "[parameters('machineSettings').diskSize]",
              "lun": 7,
              "caching": "ReadOnly",
              "createOption": "Empty"
            }
          ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceNameSplunkEnterprise'))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(parameters('vmNameSplunkEnterprise'), '/node-setup')]",
      "location": "[parameters('location')]",
      "tags": {
        "program": "[parameters('tagvalues').program]",
        "project": "[parameters('tagvalues').project]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('splunkTags').provider]"
      },
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmNameSplunkEnterprise'))]",
        "[concat('Microsoft.Network/networkInterfaces/', parameters('networkInterfaceNameSplunkEnterprise'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.0",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": "[parameters('osSettingsSplunk').scripts]"
        },
        "protectedSettings": {
          "commandToExecute": "[concat('bash node-setup.sh', ' -r ', variables('splunkServerRole'), ' -c ', variables('clusterMasterIp'), ' -u ', parameters('udpPort'),  ' -p ', variables('singleQuote'), parameters('splunkAdminPassword'), variables('singleQuote'))]"
        }
      }
    }
  ],
  "outputs": {
    "splunkenterpriseUri": {
      "type": "string",
      "value": "[concat('https://',reference(resourceId('Microsoft.Network/publicIPAddresses',parameters('publicIPAddressSettingsSplunk').name)).dnsSettings.fqdn)]"
    }
  }
}
